<resources>
    <string name="app_name">Animal Catalog</string>
    <string name="cd_image">Animal Image</string>

    <!--  My Data  -->
    <string name="my_name">Faishal Mukhammad Syarief</string>
    <string name="my_email">faishalmukhammadsyarief@gmail.com</string>
    <string name="my_desc">Faishal was born on October 26, 2006, in Banyumas. He is a beginner programmer with a strong desire to learn and grow in the world of technology. Faishal is a devout Muslim and believes in the potential of programming to make a positive impact.\n\nStanding at 170cm tall and weighing 48kg, Faishal is on his journey to becoming a proficient programmer. Currently, he is a student at SMKN 1 Purwokerto, where he is eager to acquire the skills and knowledge needed to excel in the field.</string>
    <string name="share">Share</string>
    <string name="menu">Menu</string>
    <string name="cd_menu">Open menu</string>
    <string name="cd_profile">Open author\'s profile</string>
    <string name="profile">Profile</string>
    <string name="info">Info</string>

</resources>