<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/cd_image"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextAppearance.Title"
            android:layout_marginHorizontal="8dp"
            android:text="@string/my_name"
            android:textColor="@color/white"
            android:textSize="16sp"

            app:layout_constraintBottom_toTopOf="@+id/tv_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_subtitle"
            style="@style/TextAppearance.Subtitle"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="12dp"
            android:ellipsize="end"
            android:text="@string/my_email"
            android:textColor="@color/white"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
