<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="440dp"
            app:collapsedTitleTextColor="@color/white"
            app:contentScrim="@color/black"
            app:expandedTitleTextColor="@color/white"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Faishal">

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/cd_image"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:src="@drawable/me" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:menu="@menu/toolbar_detail"
                app:navigationIcon="@drawable/ic_back">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_toolbar_title"
                        style="@style/TextAppearance.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:ellipsize="marquee"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"
                        android:text="@string/my_name"
                        android:textColor="@color/semi_transparent"

                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/sv_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="5dp"
        android:fillViewport="true"
        android:paddingHorizontal="16dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="@string/info"
                android:layout_width="24dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginVertical="8dp"
                android:src="@drawable/ic_question"
                app:tint="@color/black"/>

            <TextView
                android:id="@+id/tv_title"
                style="@style/TextAppearance.Title"
                android:layout_marginTop="4dp"
                android:text="@{activity.name}"
                tools:text="@string/my_name" />

            <TextView
                android:id="@+id/tv_subtitle"
                style="@style/TextAppearance.Subtitle"
                android:text="@{activity.birth}"
                android:textSize="16sp"
                tools:text="@string/my_email" />

            <View style="@style/Divider" />

            <TextView
                android:id="@+id/tv_description"
                style="@style/TextAppearance.Description"
                android:text="@{activity.description}"
                android:textSize="16sp"
                tools:ignore="VisualLintLongText"
                tools:text="@string/my_desc" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/share"
        android:src="@drawable/ic_share"
        app:fabCustomSize="80dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="center|bottom"
        app:maxImageSize="40dp"
        app:tint="@color/black"
        tools:ignore="ImageContrastCheck" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>